--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -1,7 +1,7 @@
 // $color-primary: #f59a83;
-$color-primary: #f38e82;
-$color-grad-1: #fbdb89;
-$color-grad-2: #f48982;
+$color-primary: #7d3ef1;
+$color-grad-1: #89cdfb;
+$color-grad-2: #4d5cdd;
 
 $color-grey-light-1: #f9f5f3; // Light background
 $color-grey-light-2: #f2efee; // Light lines
